# Skype-Quizer

./: .gitmodules  CMakeLists.txt  README.md  run_quiz.sh
CImg-2.8.1/: README.txt
assets/: Tie Break.json
assets/last-weeks-questions/: Actors & Actresses.json  Art + Culture.json  Australia.json  Biology.json  Economy.json  Film.json  General.json  Geography.json  History.json  Language.json  Music.json  Politics.json  Science.json  Sports.json
assets/questions/: Actors & Actresses.json  Art + Culture.json  Art and Literature.json  Australia.json  Biology.json  Computing.json  Dinosaurs.json  Economy.json  Film.json  Food + Drink.json  Fruits + Vegetables.json  General Knowledge.json  General.json  Geography.json  History.json  Language.json  Literature.json  Music.json  Nature.json  Politics.json  Science and Nature.json  Science.json  Sport.json  Sports.json  TV and Films.json
controller/: package-lock.json  package.json
controller/src/: Controller.jsx  index.js
src/: colour.h  imagehelper.cpp  imagehelper.h  json_wrapper.h  quiz.cpp  util.cpp  util.h  v4l2_cimg.h
src/fonts/: cimg_freetype.cpp  cimg_freetype.h  due_font.cpp  due_font.h
src/quiz-crawlers/: quiz-zone.co.uk.py
